--- a/app/src/main/res/drawable/pink_out_line.xml
+++ b/app/src/main/res/drawable/pink_out_line.xml
@@ -4,5 +4,5 @@
     <solid android:color="#80000000" />
     <stroke
         android:width="1dp"
-        android:color="@color/pink" />
+        android:color="#354856" />
 </shape>
