--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,20 +7,20 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.tec2.paybus.ui.home.ResumenFragment"
-        android:label="@string/title_home"
+        android:name="com.tec2.paybus.ResumenFragment"
+        android:label="Inicio"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.tec2.paybus.ui.dashboard.PagarFragment"
-        android:label="@string/title_dashboard"
+        android:name="com.tec2.paybus.PagarFragment"
+        android:label="Pagar"
         tools:layout="@layout/fragment_pagar" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.tec2.paybus.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:name="com.tec2.paybus.RecargarTransferirFragment"
+        android:label="Recargar/Transferir"
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
